tests/custom/STARIS_2022/basic/type-conversion-operators/toInt-error/stderr.expected
Error:
    Parser error in file: toInt-error.essence Error is:
ValidatorError toInt-error.essence:3:15:
  |
3 | such that b = toInt(a)
  |               ^^^^^^^^
Type error:
	Expected: bool
	Got: int

